# deadbeats

./: README.md  deadbeats.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_deadbeats.py
