[tool.poetry]
name = "deadbeats"
version = "0.3.2"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"

repository = "https://github.com/hpprc/deadbeats"
homepage = "https://github.com/hpprc/deadbeats"

[tool.poetry.scripts]
deadbeats = "deadbeats:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
datetime = "^4.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.15.0"
pytest-dotenv = "^0.5.2"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
